[gd_scene load_steps=5 format=3 uid="uid://cgmuhossl8a5m"]

[ext_resource type="Texture2D" uid="uid://bqr2fnlrgqne1" path="res://assets/images/player_image.png" id="1"]
[ext_resource type="Script" path="res://src/game_objects/playable/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ctjq5ppdpxcfr" path="res://assets/images/light_image.png" id="3_ttu7v"]

[sub_resource type="CanvasItemMaterial" id="2"]
light_mode = 2

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("2")
texture = ExtResource("1")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(-32, -32)
scale = Vector2(0.555556, 0.714286)
polygon = PackedVector2Array(-57.6, -33.6, 172.8, 44.8, -57.6, 123.2)

[node name="Shootpoint" type="Marker2D" parent="."]
position = Vector2(88, 0)

[node name="Camera2D" type="Camera2D" parent="." groups=["playerView"]]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_smoothed = true

[node name="PointLight2D" type="PointLight2D" parent="."]
shadow_enabled = true
shadow_filter_smooth = 1.0
texture = ExtResource("3_ttu7v")
texture_scale = 30.0

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
